// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`NodesPaths gets filtered node paths 1`] = `
Array [
  Object {
    "children": Array [
      Object {
        "children": Array [],
        "index": 0,
        "isMarked": false,
        "node": Object {
          "backColor": "",
          "description": "description",
          "fontStyle": "Regular",
          "foreColor": "",
          "hasChildren": false,
          "imageId": "imageId",
          "isCheckboxEnabled": false,
          "isCheckboxVisible": false,
          "isChecked": false,
          "isEditable": false,
          "isExpanded": false,
          "isSelectable": true,
          "key": Object {
            "pathFromRoot": Array [
              "9ddc15a8675905ade0f08c10b38f0384",
              "8035f748ae3f95a76ec8a1a0442fb8df",
            ],
            "type": "nodeType",
          },
          "label": "filter ch1",
          "type": "nodeType",
        },
      },
      Object {
        "children": Array [
          Object {
            "children": Array [],
            "index": 0,
            "isMarked": false,
            "node": Object {
              "backColor": "",
              "description": "description",
              "fontStyle": "Regular",
              "foreColor": "",
              "hasChildren": false,
              "imageId": "imageId",
              "isCheckboxEnabled": false,
              "isCheckboxVisible": false,
              "isChecked": false,
              "isEditable": false,
              "isExpanded": false,
              "isSelectable": true,
              "key": Object {
                "pathFromRoot": Array [
                  "9ddc15a8675905ade0f08c10b38f0384",
                  "b37f9747a022260ad6a4efccd0e8b754",
                  "73a8f737d8e344a2a3028be2c792c94e",
                ],
                "type": "nodeType",
              },
              "label": "filter ch4",
              "type": "nodeType",
            },
          },
        ],
        "index": 1,
        "isMarked": false,
        "node": Object {
          "backColor": "",
          "description": "description",
          "fontStyle": "Regular",
          "foreColor": "",
          "hasChildren": true,
          "imageId": "imageId",
          "isCheckboxEnabled": false,
          "isCheckboxVisible": false,
          "isChecked": false,
          "isEditable": false,
          "isExpanded": false,
          "isSelectable": true,
          "key": Object {
            "pathFromRoot": Array [
              "9ddc15a8675905ade0f08c10b38f0384",
              "b37f9747a022260ad6a4efccd0e8b754",
            ],
            "type": "nodeType",
          },
          "label": "other ch3",
          "type": "nodeType",
        },
      },
    ],
    "index": 0,
    "isMarked": false,
    "node": Object {
      "backColor": "",
      "description": "description",
      "fontStyle": "Regular",
      "foreColor": "",
      "hasChildren": true,
      "imageId": "imageId",
      "isCheckboxEnabled": false,
      "isCheckboxVisible": false,
      "isChecked": false,
      "isEditable": false,
      "isExpanded": false,
      "isSelectable": true,
      "key": Object {
        "pathFromRoot": Array [
          "9ddc15a8675905ade0f08c10b38f0384",
        ],
        "type": "nodeType",
      },
      "label": "filter r1",
      "type": "nodeType",
    },
  },
  Object {
    "children": Array [
      Object {
        "children": Array [],
        "index": 0,
        "isMarked": false,
        "node": Object {
          "backColor": "",
          "description": "description",
          "fontStyle": "Regular",
          "foreColor": "",
          "hasChildren": false,
          "imageId": "imageId",
          "isCheckboxEnabled": false,
          "isCheckboxVisible": false,
          "isChecked": false,
          "isEditable": false,
          "isExpanded": false,
          "isSelectable": true,
          "key": Object {
            "pathFromRoot": Array [
              "580aa85c9cb20ceb66e172d969c5a57c",
              "9e0525827ed08046ad1e069ab3e8315a",
            ],
            "type": "nodeType",
          },
          "label": "filter ch6",
          "type": "nodeType",
        },
      },
    ],
    "index": 1,
    "isMarked": false,
    "node": Object {
      "backColor": "",
      "description": "description",
      "fontStyle": "Regular",
      "foreColor": "",
      "hasChildren": true,
      "imageId": "imageId",
      "isCheckboxEnabled": false,
      "isCheckboxVisible": false,
      "isChecked": false,
      "isEditable": false,
      "isExpanded": false,
      "isSelectable": true,
      "key": Object {
        "pathFromRoot": Array [
          "580aa85c9cb20ceb66e172d969c5a57c",
        ],
        "type": "nodeType",
      },
      "label": "other r3",
      "type": "nodeType",
    },
  },
]
`;

exports[`NodesPaths gets node paths 1`] = `
Array [
  Object {
    "children": Array [
      Object {
        "children": Array [
          Object {
            "children": Array [
              Object {
                "children": Array [],
                "index": 0,
                "isMarked": false,
                "node": Object {
                  "backColor": "",
                  "description": "",
                  "fontStyle": "Regular",
                  "foreColor": "",
                  "hasChildren": false,
                  "imageId": "ECInstanceImage://BisCore:DefinitionPartition",
                  "isCheckboxEnabled": false,
                  "isCheckboxVisible": false,
                  "isChecked": false,
                  "isEditable": false,
                  "isExpanded": false,
                  "isSelectable": true,
                  "key": Object {
                    "instanceKey": Object {
                      "className": "BisCore:DefinitionPartition",
                      "id": "0x10",
                    },
                    "pathFromRoot": Array [
                      "dd7113fb02898d8e2bfa5dce5d245a89",
                      "8099deca97142845abe4a1892e69c796",
                      "3a90b68d1f96b254d517798218314401",
                      "a544bf139a24d1222057a555d08601c1",
                      "678d9d1337f1db45718228be8468be68",
                    ],
                    "type": "ECInstanceNode",
                  },
                  "label": "Definition Partition-0-G",
                  "type": "ECInstanceNode",
                },
              },
            ],
            "index": 0,
            "isMarked": false,
            "node": Object {
              "backColor": "",
              "description": "A Definition Partition element indicates that there is a definition-related modeling perspective within the overall DgnDb information hierarchy. A Definition Partition is always parented to a Subject and broken down by a Definition Model.",
              "fontStyle": "Regular",
              "foreColor": "",
              "hasChildren": true,
              "imageId": "ECClassImage://BisCore:DefinitionPartition",
              "isCheckboxEnabled": false,
              "isCheckboxVisible": false,
              "isChecked": false,
              "isEditable": false,
              "isExpanded": false,
              "isSelectable": true,
              "key": Object {
                "className": "BisCore:DefinitionPartition",
                "groupedInstancesCount": 1,
                "pathFromRoot": Array [
                  "dd7113fb02898d8e2bfa5dce5d245a89",
                  "8099deca97142845abe4a1892e69c796",
                  "3a90b68d1f96b254d517798218314401",
                  "a544bf139a24d1222057a555d08601c1",
                ],
                "type": "ECClassGroupingNode",
              },
              "label": "Definition Partition",
              "type": "ECClassGroupingNode",
            },
          },
          Object {
            "children": Array [
              Object {
                "children": Array [],
                "index": 0,
                "isMarked": true,
                "node": Object {
                  "backColor": "",
                  "description": "",
                  "fontStyle": "Regular",
                  "foreColor": "",
                  "hasChildren": false,
                  "imageId": "ECInstanceImage://BisCore:LinkPartition",
                  "isCheckboxEnabled": false,
                  "isCheckboxVisible": false,
                  "isChecked": false,
                  "isEditable": false,
                  "isExpanded": false,
                  "isSelectable": true,
                  "key": Object {
                    "instanceKey": Object {
                      "className": "BisCore:LinkPartition",
                      "id": "0xe",
                    },
                    "pathFromRoot": Array [
                      "dd7113fb02898d8e2bfa5dce5d245a89",
                      "8099deca97142845abe4a1892e69c796",
                      "3a90b68d1f96b254d517798218314401",
                      "7730d4b98bb41692dc45949194ee91eb",
                      "66d3d11ba1e0780e13730ab2b79dd66d",
                    ],
                    "type": "ECInstanceNode",
                  },
                  "label": "Link Partition-0-E",
                  "type": "ECInstanceNode",
                },
              },
            ],
            "index": 1,
            "isMarked": false,
            "node": Object {
              "backColor": "",
              "description": "A Link Partition element indicates that there is a link-related modeling perspective within the overall DgnDb information hierarchy. A Link Partition is always parented to a Subject and broken down by a Link Model.",
              "fontStyle": "Regular",
              "foreColor": "",
              "hasChildren": true,
              "imageId": "ECClassImage://BisCore:LinkPartition",
              "isCheckboxEnabled": false,
              "isCheckboxVisible": false,
              "isChecked": false,
              "isEditable": false,
              "isExpanded": false,
              "isSelectable": true,
              "key": Object {
                "className": "BisCore:LinkPartition",
                "groupedInstancesCount": 1,
                "pathFromRoot": Array [
                  "dd7113fb02898d8e2bfa5dce5d245a89",
                  "8099deca97142845abe4a1892e69c796",
                  "3a90b68d1f96b254d517798218314401",
                  "7730d4b98bb41692dc45949194ee91eb",
                ],
                "type": "ECClassGroupingNode",
              },
              "label": "Link Partition",
              "type": "ECClassGroupingNode",
            },
          },
        ],
        "index": 0,
        "isMarked": false,
        "node": Object {
          "backColor": "",
          "description": "",
          "fontStyle": "Regular",
          "foreColor": "",
          "hasChildren": true,
          "imageId": "ECInstanceImage://BisCore:Subject",
          "isCheckboxEnabled": false,
          "isCheckboxVisible": false,
          "isChecked": false,
          "isEditable": false,
          "isExpanded": false,
          "isSelectable": true,
          "key": Object {
            "instanceKey": Object {
              "className": "BisCore:Subject",
              "id": "0x1",
            },
            "pathFromRoot": Array [
              "dd7113fb02898d8e2bfa5dce5d245a89",
              "8099deca97142845abe4a1892e69c796",
              "3a90b68d1f96b254d517798218314401",
            ],
            "type": "ECInstanceNode",
          },
          "label": "Subject-0-1",
          "type": "ECInstanceNode",
        },
      },
    ],
    "index": 0,
    "isMarked": false,
    "node": Object {
      "backColor": "",
      "description": "",
      "fontStyle": "Regular",
      "foreColor": "",
      "hasChildren": true,
      "imageId": "ECInstanceImage://BisCore:RepositoryModel",
      "isCheckboxEnabled": false,
      "isCheckboxVisible": false,
      "isChecked": false,
      "isEditable": false,
      "isExpanded": false,
      "isSelectable": true,
      "key": Object {
        "instanceKey": Object {
          "className": "BisCore:RepositoryModel",
          "id": "0x1",
        },
        "pathFromRoot": Array [
          "dd7113fb02898d8e2bfa5dce5d245a89",
          "8099deca97142845abe4a1892e69c796",
        ],
        "type": "ECInstanceNode",
      },
      "label": "Repository Model-0-1",
      "type": "ECInstanceNode",
    },
  },
]
`;
